LPS-50024 fix spacing between elements

--- a/portlets/knowledge-base-portlet/docroot/admin/css/common.css
+++ b/portlets/knowledge-base-portlet/docroot/admin/css/common.css
@@ -141,7 +141,7 @@
 	.kb-article-feedback-actions {
 		clear: both;
 		display: block;
-		margin: 10px 0 10px 5px;
+		padding: 10px 0 10px 5px;
 	}
 
 	.kb-article-siblings {
